fix: align collapse toggle with page padding

--- a/resources/skins.citizen.styles.sections/skins.citizen.styles.sections.less
+++ b/resources/skins.citizen.styles.sections/skins.citizen.styles.sections.less
@@ -34,6 +34,7 @@
 			width: 18px;
 			height: 18px;
 			padding: 5px;
+			margin-left: -5px; // align with page padding
 			margin-right: 10px;
 			background-position: center;
 			background-repeat: no-repeat;
